<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewModel"
            type="com.jasvir.localgalleryapp.ui.gallery.GalleryViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/galleryFragSwipeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{() -> viewModel.refresh()}"
            app:refreshing="@{viewModel.dataLoading}">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/galleryFragToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppThemeNoActionBarToolbar"
                    app:title="@string/app_name" />

                <LinearLayout
                    android:id="@+id/galleryFragOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/galleryFragToolbar"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/galleryFragOptionsAddPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/take_photo" />

                    <Button
                        android:id="@+id/galleryFragOptionsAddFromRoll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/pick_image" />

                    <Button
                        android:id="@+id/galleryFragOptionsDelete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.deleteImages()}"
                        android:text="@string/delete_images" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/galleryFragRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/galleryFragOptions"
                    android:background="@color/separator_grey"
                    android:paddingBottom="10dp"
                    app:items="@{viewModel.items}" />


            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>